# ArcGIS-Pro-Bridge-MCP-Server

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FUTURE_WORK.md  LICENSE  README.md  SECURITY.md  WINDOWS_SETUP.md  arcgis_aprx_archive.py  arcgis_mcp_logging.py  arcgis_mcp_resources.py  arcgis_mcp_server.py  arcgis_mcp_services.py  arcgis_runtime_utils.py  arcgis_script_templates.py  opencode.json  opencode.json.example  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: README.md  arcpy-buffer-example.py  claude-desktop-mcp-config.json  cursor-mcp-config.json  prompt-examples.md
tests/: setup_test.bat  test_arcgis_mcp_server.py
