[project]
name = "arcgis-pro-bridge-mcp"
version = "0.1.0"
description = "Python MCP server bridging AI agents with local ArcGIS Pro."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["mcp", "arcgis", "arcgis-pro", "arcpy", "gis"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp[cli]>=1.9.4",
]

[project.scripts]
arcgis-mcp-server = "arcgis_mcp_server:main"

[dependency-groups]
dev = [
  "ruff>=0.11.2",
]

[tool.setuptools]
py-modules = ["arcgis_aprx_archive", "arcgis_mcp_resources", "arcgis_mcp_server", "arcgis_mcp_services", "arcgis_runtime_utils", "arcgis_script_templates"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "arcgis-mcp-*",
  ".tmp-shell",
  ".tmp-tests",
  ".uv-cache",
]

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "S",
]
ignore = [
  "S101",
]
